--- a/ShikShaq/Views/Shared/_Layout.cshtml
+++ b/ShikShaq/Views/Shared/_Layout.cshtml
@@ -103,7 +103,7 @@
             <p>&copy; 2020 - ShikShaq</p>
             <div id="fb-root"></div>
 
-            <p>Like our facebook page: </p><div class="fb-like" data-href="https://www.facebook.com/nba" data-width="" data-layout="standard" data-action="like" data-size="small" data-share="false"></div>
+            <p>Like our facebook page: </p><div class="fb-like" data-href="https://www.facebook.com/ShikShaq-105204734579121" data-width="" data-layout="standard" data-action="like" data-size="large" data-share="false"></div>
         </footer>
     </div>
 
