--- a/ShikShaq/Views/Shared/_Layout.cshtml
+++ b/ShikShaq/Views/Shared/_Layout.cshtml
@@ -20,6 +20,7 @@
     <environment include="Development">
         <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="~/css/site.css" />
+        <link href="~/css/recommended-products.css" rel="stylesheet" type="text/css">
     </environment>
     <environment exclude="Development">
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
@@ -29,7 +30,7 @@
     </environment>
 </head>
 <body>
-
+  
     <nav class="topnav" id="myTopnav">
         <a asp-controller="Home" asp-action="Index" class="active">SHIK SHAQ</a>
 
@@ -95,10 +96,17 @@
     </nav>
 
     <partial name="_CookieConsentPartial" />
+    <div class="container-fluid">
+        <div class="row">
 
-    <div class="container body-content" style="max-width:100%; padding-top:50px">
-        @RenderBody()
-        <hr />
+            <div class="col-sm-9 body-content">
+                @RenderBody()
+            </div>
+            <div class="col-sm-3">
+                <partial name="/Views/Shared/RecommendedProductsPartial.cshtml" />
+            </div>
+        </div>
+        <hr/>
         <footer>
             <p>&copy; 2020 - ShikShaq</p>
             <div id="fb-root"></div>
@@ -106,7 +114,6 @@
             <p>Like our facebook page: </p><div class="fb-like" data-href="https://www.facebook.com/ShikShaq-105204734579121" data-width="" data-layout="standard" data-action="like" data-size="large" data-share="false"></div>
         </footer>
     </div>
-
     <environment include="Development">
         <script src="~/lib/jquery/dist/jquery.js"></script>
         <link href="~/lib/jquery-data/dist/jquery.dataTables.min.css" rel="stylesheet" type="text/css">
@@ -114,6 +121,7 @@
 
         <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
         <script src="~/js/site.js" asp-append-version="true"></script>
+        <script src="~/js/recommendedProducts.js"></script>
     </environment>
     <environment exclude="Development">
         <script src="https://ajax.aspnetcdn.com/ajax/jquery/jquery-3.3.1.min.js"
