shiq shaq intro

--- a/ShikShaq/Views/Home/About.cshtml
+++ b/ShikShaq/Views/Home/About.cshtml
@@ -47,5 +47,11 @@
             <div id="map" style="width: 400px; height: 300px"></div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-md-12">
+            <p><b>For some motivation</b></p>
+            <video id="intro-video" src="@Url.Content("~/videos/shiq-shaq-intro.mp4")" controls style="width:50%;height:50%;" loop />
+        </div>
+    </div>
 </div>
 
