--- a/ShikShaq/Views/Orders/Index.cshtml
+++ b/ShikShaq/Views/Orders/Index.cshtml
@@ -4,11 +4,8 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Orders</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
 
 
 <form asp-action="Search" class="form-inline">
@@ -17,11 +14,11 @@
         <input name="orderDate" class="form-control  mr-2" type="date"/>
     </div>
     <div class="form-group">
-        <input type="submit" value="Search" class="btn btn-default" />
+        <input type="submit" value="Search" class="btn btn-primary" />
     </div>
 </form>
 
-<table class="table">
+<table class="table table-hover">
     <thead>
         <tr>
             <th>
@@ -58,3 +55,7 @@
         }
     </tbody>
 </table>
+
+<p>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
+</p>
