--- a/ShikShaq/Views/ProductTags/Index.cshtml
+++ b/ShikShaq/Views/ProductTags/Index.cshtml
@@ -4,12 +4,9 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
+<h2>Product Tags</h2>
 
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
+<table class="table table-hover">
     <thead>
         <tr>
             <th>
@@ -38,3 +35,7 @@
 }
     </tbody>
 </table>
+
+<p>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
+</p>
