--- a/ShikShaq/Views/Users/Index.cshtml
+++ b/ShikShaq/Views/Users/Index.cshtml
@@ -4,31 +4,27 @@
     ViewData["Title"] = "Index";
 }
 
-<h2>Index</h2>
-
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
+<h2>Users</h2>
 
 <form asp-action="Search">
     <div class="form-group">
-        <label class="control-label mr-2">Enter user name</label>
-        <input name="name" class="form-control  mr-2"  style="width:30%"/>
+        <input name="name" class="form-control  mr-2"  style="width:30%"
+               placeholder="Enter User Name"/>
     </div>
     <div class="form-group">
-        <label class="control-label mr-2">Enter user address</label>
-        <input name="address" class="form-control  mr-2"  style="width:30%"/>
+        <input name="address" class="form-control  mr-2"  style="width:30%"
+                              placeholder="Enter User Address"/>
     </div>
     <div class="form-group">
-        <label class="control-label mr-2">Enter user height</label>
-        <input name="height" class="form-control  mr-2"  style="width:30%"/>
+        <input name="height" class="form-control  mr-2"  style="width:30%"
+                  placeholder="Enter User Height"/>
     </div>
     <div class="form-group">
-        <input type="submit" value="Search" class="btn btn-default" />
+        <input type="submit" value="Search" class="btn btn-primary" />
     </div>
 </form>
 
-<table class="table">
+<table class="table table-hover">
     <thead>
         <tr>
             <th>
@@ -95,3 +91,7 @@
         }
     </tbody>
 </table>
+
+<p>
+    <a asp-action="Create" class="btn btn-primary">Create New</a>
+</p>
