styling edit pages

--- a/ShikShaq/Views/ProductTags/Edit.cshtml
+++ b/ShikShaq/Views/ProductTags/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Edit Product Tag</h2>
 
-<h4>ProductTag</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -23,7 +22,7 @@
                 <select name="TagId" class="form-control" asp-items="@ViewBag.Tags"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
