--- a/ShikShaq/Views/Branches/Edit.cshtml
+++ b/ShikShaq/Views/Branches/Edit.cshtml
@@ -10,9 +10,8 @@
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCYy3vaPn7Dnb994s30XZHwqj2hdqXqTv4&callback=initMap"
             async defer></script>
 }
-<h2>Edit</h2>
 
-<h4>Branch</h4>
+<h2>Edit Branch</h2>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -47,7 +46,7 @@
             </div>
             <br />
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
