--- a/ShikShaq/Views/ProductInBranches/Edit.cshtml
+++ b/ShikShaq/Views/ProductInBranches/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Edit Product In Branch</h2>
 
-<h4>ProductInBranch</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -28,7 +27,7 @@
                 <select name="BranchId" class="form-control" asp-items="@ViewBag.Branches"></select>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
