--- a/ShikShaq/Views/Products/Edit.cshtml
+++ b/ShikShaq/Views/Products/Edit.cshtml
@@ -4,9 +4,8 @@
     ViewData["Title"] = "Edit";
 }
 
-<h2>Edit</h2>
+<h2>Edit Product</h2>
 
-<h4>Product</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -38,7 +37,7 @@
                 <input type="file" id="files" asp-for="Image"  accept="image/*" />
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
     </div>
