--- a/ShikShaq/Views/ProductTags/Delete.cshtml
+++ b/ShikShaq/Views/ProductTags/Delete.cshtml
@@ -4,8 +4,6 @@
     ViewData["Title"] = "Delete";
 }
 
-<h2>Delete</h2>
-
 <h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>ProductTag</h4>
@@ -15,7 +13,7 @@
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-default" /> |
+        <input type="submit" value="Delete" class="btn btn-primary" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
