--- a/ShikShaq/Views/Orders/Index.cshtml
+++ b/ShikShaq/Views/Orders/Index.cshtml
@@ -11,14 +11,14 @@
 <form asp-action="Search" class="form-inline">
     <div class="form-group">
         <label class="control-label mr-2">Enter order date</label>
-        <input name="orderDate" class="form-control  mr-2" type="date"/>
+        <input name="orderDate" class="form-control  mr-2" type="date" />
     </div>
     <div class="form-group">
         <input type="submit" value="Search" class="btn btn-primary" />
     </div>
 </form>
 
-<table class="table table-hover">
+<table class="table table-hover table-bordered">
     <thead>
         <tr>
             <th>
@@ -30,7 +30,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Branch.Name)
             </th>
-            <th></th>
+            <th class="other-options">
+                Other Options
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -59,3 +61,8 @@
 <p>
     <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
+
+@section Styles
+{
+    <link href="~/css/index-pages.css" rel="stylesheet" type="text/css">
+}
