--- a/ShikShaq/Views/Tags/Index.cshtml
+++ b/ShikShaq/Views/Tags/Index.cshtml
@@ -8,21 +8,23 @@
 
 <form asp-action="Search" class="form-inline">
     <div class="form-group">
-        <input name="name" class="form-control  mr-2" 
-               placeholder="Enter Tag Name"/>
+        <input name="name" class="form-control  mr-2"
+               placeholder="Enter Tag Name" />
     </div>
     <div class="form-group">
         <input type="submit" value="Search" class="btn btn-primary" />
     </div>
 </form>
 
-<table class="table table-hover">
+<table class="table table-hover table-bordered">
     <thead>
         <tr>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
-            <th></th>
+            <th class="other-options">
+                Other Options
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -45,4 +47,10 @@
 <p>
     <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
+
+@section Styles
+{
+    <link href="~/css/index-pages.css" rel="stylesheet" type="text/css">
+}
+
 
