--- a/ShikShaq/Views/Users/Index.cshtml
+++ b/ShikShaq/Views/Users/Index.cshtml
@@ -8,23 +8,23 @@
 
 <form asp-action="Search">
     <div class="form-group">
-        <input name="name" class="form-control  mr-2"  style="width:30%"
-               placeholder="Enter User Name"/>
+        <input name="name" class="form-control  mr-2" style="width:30%"
+               placeholder="Enter User Name" />
     </div>
     <div class="form-group">
-        <input name="address" class="form-control  mr-2"  style="width:30%"
-                              placeholder="Enter User Address"/>
+        <input name="address" class="form-control  mr-2" style="width:30%"
+               placeholder="Enter User Address" />
     </div>
     <div class="form-group">
-        <input name="height" class="form-control  mr-2"  style="width:30%"
-                  placeholder="Enter User Height"/>
+        <input name="height" class="form-control  mr-2" style="width:30%"
+               placeholder="Enter User Height" />
     </div>
     <div class="form-group">
         <input type="submit" value="Search" class="btn btn-primary" />
     </div>
 </form>
 
-<table class="table table-hover">
+<table class="table table-hover  table-bordered">
     <thead>
         <tr>
             <th>
@@ -51,7 +51,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.IsAdmin)
             </th>
-            <th></th>
+            <th class="other-options">
+                Other Options
+            </th>
         </tr>
     </thead>
     <tbody>
@@ -95,3 +97,9 @@
 <p>
     <a asp-action="Create" class="btn btn-primary">Create New</a>
 </p>
+
+@section Styles
+{
+    <link href="~/css/index-pages.css" rel="stylesheet" type="text/css">
+}
+
