Basic Add to Cart with Duplicates

--- a/ShikShaq/Views/Products/Index.cshtml
+++ b/ShikShaq/Views/Products/Index.cshtml
@@ -61,7 +61,7 @@
                                 <a asp-action="Details" asp-route-id="@productsArr[j].Id">Details</a>
                                 <a asp-action="Delete" asp-route-id="@productsArr[j].Id">Delete</a>
                             }
-                            <small class="text-muted"><button class=" = btn btn-success"><a asp-action="Details" asp-route-id="@productsArr[j].Id">ADD TO CART</a></button></small>
+                            <small class="text-muted"><button class=" = btn btn-success"><a asp-action="AddToCart" asp-route-id="@productsArr[j].Id">ADD TO CART</a></button></small>
                         </div>
                     </div>
                 </div>
