Additional pie chart

--- a/ShikShaq/Views/Statistics/Index.cshtml
+++ b/ShikShaq/Views/Statistics/Index.cshtml
@@ -3,6 +3,9 @@
 <script src="https://d3js.org/d3-scale-chromatic.v1.min.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js"></script>
+<!-- Function for radial charts -->
+<script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/d3-scale-radial.js"></script>
 <h2>Most Selling Products</h2><div id="productorders"></div>
 <h2>Trending Tags</h2> <div id="populartags"></div>
+<h2>Cart Categories</h2> <div id="mostincart"></div>
 <script src="~/js/statistics.js">></script>
