--- a/ShikShaq/Views/Statistics/Index.cshtml
+++ b/ShikShaq/Views/Statistics/Index.cshtml
@@ -5,7 +5,13 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.21/jquery-ui.min.js"></script>
 <!-- Function for radial charts -->
 <script src="https://cdn.jsdelivr.net/gh/holtzy/D3-graph-gallery@master/LIB/d3-scale-radial.js"></script>
-<h2>Most Selling Products</h2><div id="productorders"></div>
-<h2>Trending Tags</h2> <div id="populartags"></div>
-<h2>Cart Categories</h2> <div id="mostincart"></div>
+<h2>Most Selling Products</h2
+><h3>Comparing which products have been ordered the most</h3>
+<div id="productorders"></div>
+<h2>Trending Tags</h2>
+<h3>Most popular Tags according to orders executed</h3>
+<div id="populartags"></div>
+<h2>Cart Categories</h2>
+<h3>Checking carts of all users for the currently most popular tags</h3>
+<div id="mostincart"></div>
 <script src="~/js/statistics.js">></script>
