--- a/ShikShaq/Views/Shared/_Layout.cshtml
+++ b/ShikShaq/Views/Shared/_Layout.cshtml
@@ -44,7 +44,7 @@
                     <i class="fa fa-caret-down"></i>
                 </button>
                 <div class="dropdown-content">
-                    <a href="/users/SimpleUserDetails/@User.Claims.ToList()[0].Value" method="get">My Details</a>
+                    <a asp-controller="Account" asp-action="MyDetails" method="get">My Details</a>
                     <a asp-controller="Account" asp-action="Cart" method="get">My Cart</a>
                     <a asp-controller="Account" asp-action="Orders" method="get">My Orders</a>
                     <a asp-controller="Account" asp-action="Logout" method="get">Logout</a>
@@ -78,16 +78,7 @@
             </div>
         }
 
-        <div class="dropdown">
-            <button class="dropbtn">
-                Products
-                <i class="fa fa-caret-down"></i>
-            </button>
-            <div class="dropdown-content">
-                <a asp-controller="Products" asp-action="Index" method="get">All Products</a>
-                <a asp-controller="Statistics" asp-action="Index" method="get">Statistics</a>
-            </div>
-        </div>
+        <a asp-controller="Products" asp-action="Index" method="get">Products</a>
 
         <a href="/games">Score</a>
         <a href="/home/about">About</a>
