feat: useless closer of nordman

--- a/ShikShaq/Views/Statistics/Index.cshtml
+++ b/ShikShaq/Views/Statistics/Index.cshtml
@@ -14,4 +14,4 @@
 <h2>Cart Categories</h2>
 <h3>Checking carts of all users for the currently most popular tags</h3>
 <div id="mostincart"></div>
-<script src="~/js/statistics.js">></script>
+<script src="~/js/statistics.js"></script>
